--- a/back-end/.env
+++ b/back-end/.env
@@ -1,4 +1,4 @@
-MONGO_DB_URL=mongodb://localhost:27017
+MONGO_DB_URL=mongodb://localhost:27017 || mongodb+srv://herculano:<joao1978>@cluster0.anr8j.mongodb.net/gamestore?retryWrites=true&w=majority
 DB_NAME=gamestore
 PORT=3001
 SECRET_KEY=seusegredo
